--- a/main.html
+++ b/main.html
@@ -7,9 +7,14 @@
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Amatic+SC:700,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="main">
+<div class="text">
+	<h1>To throw a Hadouken, click on Ryu!</h1>
+	<h1>Press and hold the "x" key to strike a pose.</h1>
+</div>
 <div class="ryu">
 	<div class="ryu-still"></div>
 	<div class="ryu-ready"></div>
@@ -18,6 +23,7 @@
 	</div>
 <div class="hadouken">
 </div>
+
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
